[package]
name = "bcrust-core"
version = "0.1.0"
authors = ["Tomas Korcak <korczis@gmail.com>"]
build = "build.rs"

[[bin]]
name = "bcrust_core"
path = "src/main.rs"

[lib]
name = "bcrust_core"
path = "src/lib.rs"

[build-dependencies]
protoc-rust-grpc = "0.2.1"

[dependencies]
afl = { git = "https://github.com/rust-fuzz/afl.rs"}
blake2-rfc = "0.2"
grpc = "0.2"
env_logger = "0.4"
futures  = "0.1"
futures-cpupool = "0.1"
log = "0.3"
num = "0.1"
num_cpus = "1.7"
protobuf = "1.4"
rand = "0.4"
rust-crypto = "0.2"
strsim = "0.6"
url = "1.0"
tls-api = "0.1"
