[package]
name = "bcrust-core"
version = "0.1.0"
authors = ["Tomas Korcak <korczis@gmail.com>"]
build = "build.rs"

[[bin]]
name = "bcrust_core"
path = "src/main.rs"
required-features = ["afl"]

[lib]
name = "bcrust_core"
path = "src/lib.rs"

[build-dependencies]
protoc-rust-grpc = "0.2.1"

[dependencies]
blake2-rfc = "0.2"
grpc = { git = "https://github.com/stepancheg/grpc-rust", rev = "8491d6e731ca9b" }
env_logger = "0.4"
log = "0.3"
num = "0.1"
num_cpus = "1.7"
protobuf = "1.4.1"
rand = "0.4"
rust-crypto = "0.2"
strsim = "0.6"
url = "1.0"
tls-api = "0.1.14"

[target.'cfg(any(linux,unix))'.dependencies]
afl = { git = "https://github.com/rust-fuzz/afl.rs"}
