[package]
name = "bcrust-core"
version = "0.1.0"
authors = ["Block Collider Core Developers <dev@blockcollider.org>"]
build = "build.rs"
autobins = false

[[bin]]
name = "bcrust-cli"
path = "src/cli.rs"

[lib]
name = "bcrust_core"
path = "src/lib.rs"

[build-dependencies]
protoc-rust-grpc = "0.5"

[dependencies]
blake2-rfc = "0.2"
num-bigint = "0.2"
clap = "2.32"
futures = "0.1"
futures-cpupool = "0.1"
grpc = "0.5"
httpbis = "0.7"
env_logger = "0.5"
log = "0.4"
num = "0.2"
num_cpus = "1.7"
num-traits = "0.2"
protobuf = "2.0"
rand = "0.5"
rust-crypto = "0.2"
rustc-serialize = "0.3"
strsim = "0.8"
url = "1.7"
tls-api = "0.1"

# [target.'cfg(any(linux,unix))'.dependencies]
# afl = { git = "https://github.com/rust-fuzz/afl.rs"}
